Supporting dictification for structs